--- a/Sprint 2 Ingenieria de Datos/pipeline ETL/google/ETL_florida.ipynb
+++ b/Sprint 2 Ingenieria de Datos/pipeline ETL/google/ETL_florida.ipynb
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_19032\\3902782551.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_9136\\3902782551.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df_florida['time_normalizado'] = pd.to_datetime(df_florida['time_normalizado'])\n"
      ]
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -391,30 +391,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Obtener el 10% de los datos como muestra aleatoria\n",
-    "muestra_aleatoria = df_florida.sample(frac=0.1, random_state=42)  # random_state para reproducibilidad"
+    "# muestra_aleatoria = df_florida.sample(frac=0.1, random_state=42)  # random_state para reproducibilidad"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(164892, 5)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# vemos que 164892 coincide con el 10%\n",
     "muestra_aleatoria.shape"
@@ -422,17 +411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exportar la muestra aleatoria a un archivo CSV\n",
-    "muestra_aleatoria.to_csv('reviews.csv', index=False)"
+    "# muestra_aleatoria.to_csv('reviews.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
