--- a/Sprint 2 Ingenieria de Datos/pipeline ETL/google/ETL_metadata.ipynb
+++ b/Sprint 2 Ingenieria de Datos/pipeline ETL/google/ETL_metadata.ipynb
@@ -499,18 +499,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importamos df_florida para quedarnos solo con los datos que coinciden con esa tabla\n",
-    "path = r\"C:\\Users\\sebas\\OneDrive\\Escritorio\\Proyecto-Grupal-Google-yelp\\Sprint 2 Ingenieria de Datos\\pipeline ETL\\google\\florida_data\\reviews.csv\"\n",
+    "path = r\"C:\\Users\\sebas\\OneDrive\\Escritorio\\Proyecto-Grupal-Google-yelp\\Sprint 2 Ingenieria de Datos\\pipeline ETL\\google\\metadata-sitios\\review.completo.csv\"\n",
     "df_florida = pd.read_csv(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,16 +520,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(77578, 11)"
+       "(773984, 11)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -605,87 +605,111 @@
        "      <th>category</th>\n",
        "      <th>avg_rating</th>\n",
        "      <th>num_of_reviews</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>sentiment_analysis</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Baker Distributing Company</td>\n",
-       "      <td>0x88c33fb303dc8e69:0x3485e731f1a704f8</td>\n",
-       "      <td>27.401269</td>\n",
-       "      <td>-82.532346</td>\n",
-       "      <td>Air conditioning system supplier</td>\n",
-       "      <td>4.3</td>\n",
-       "      <td>8</td>\n",
+       "      <td>Brian Shaheen, MD</td>\n",
+       "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
+       "      <td>30.159982</td>\n",
+       "      <td>-85.752277</td>\n",
+       "      <td>Family practice physician</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1.014719e+20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021-03-08 15:07:30</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Cutting Point</td>\n",
-       "      <td>0x88909517e0c1c69b:0xeaa131bf8f6f1251</td>\n",
-       "      <td>30.531940</td>\n",
-       "      <td>-87.242073</td>\n",
-       "      <td>Hair salon</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>65</td>\n",
+       "      <td>Brian Shaheen, MD</td>\n",
+       "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
+       "      <td>30.159982</td>\n",
+       "      <td>-85.752277</td>\n",
+       "      <td>Family practice physician</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1.154772e+20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2020-07-18 00:13:37</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Cutting Point</td>\n",
-       "      <td>0x88909517e0c1c69b:0xeaa131bf8f6f1251</td>\n",
-       "      <td>30.531940</td>\n",
-       "      <td>-87.242073</td>\n",
-       "      <td>Hair salon</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>65</td>\n",
+       "      <td>Brian Shaheen, MD</td>\n",
+       "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
+       "      <td>30.159982</td>\n",
+       "      <td>-85.752277</td>\n",
+       "      <td>Family practice physician</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1.018050e+20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2018-05-04 10:30:53</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Cutting Point</td>\n",
-       "      <td>0x88909517e0c1c69b:0xeaa131bf8f6f1251</td>\n",
-       "      <td>30.531940</td>\n",
-       "      <td>-87.242073</td>\n",
-       "      <td>Hair salon</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>65</td>\n",
+       "      <td>Brian Shaheen, MD</td>\n",
+       "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
+       "      <td>30.159982</td>\n",
+       "      <td>-85.752277</td>\n",
+       "      <td>Family practice physician</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1.063444e+20</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2016-07-07 16:10:19</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Dexter Coin Laundry</td>\n",
-       "      <td>0x88dd12df337bdd49:0xcdba96fd79ced708</td>\n",
-       "      <td>28.032902</td>\n",
-       "      <td>-81.733152</td>\n",
-       "      <td>Laundromat</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>13</td>\n",
+       "      <td>Brian Shaheen, MD</td>\n",
+       "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
+       "      <td>30.159982</td>\n",
+       "      <td>-85.752277</td>\n",
+       "      <td>Family practice physician</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1.008751e+20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2016-02-12 12:56:55</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         name                            business_id  \\\n",
-       "0  Baker Distributing Company  0x88c33fb303dc8e69:0x3485e731f1a704f8   \n",
-       "1               Cutting Point  0x88909517e0c1c69b:0xeaa131bf8f6f1251   \n",
-       "2               Cutting Point  0x88909517e0c1c69b:0xeaa131bf8f6f1251   \n",
-       "3               Cutting Point  0x88909517e0c1c69b:0xeaa131bf8f6f1251   \n",
-       "4         Dexter Coin Laundry  0x88dd12df337bdd49:0xcdba96fd79ced708   \n",
+       "                name                            business_id   latitude  \\\n",
+       "0  Brian Shaheen, MD  0x8893863ea87bd5dd:0x9383ebf973e74abb  30.159982   \n",
+       "1  Brian Shaheen, MD  0x8893863ea87bd5dd:0x9383ebf973e74abb  30.159982   \n",
+       "2  Brian Shaheen, MD  0x8893863ea87bd5dd:0x9383ebf973e74abb  30.159982   \n",
+       "3  Brian Shaheen, MD  0x8893863ea87bd5dd:0x9383ebf973e74abb  30.159982   \n",
+       "4  Brian Shaheen, MD  0x8893863ea87bd5dd:0x9383ebf973e74abb  30.159982   \n",
        "\n",
-       "    latitude  longitude                          category  avg_rating  \\\n",
-       "0  27.401269 -82.532346  Air conditioning system supplier         4.3   \n",
-       "1  30.531940 -87.242073                        Hair salon         4.7   \n",
-       "2  30.531940 -87.242073                        Hair salon         4.7   \n",
-       "3  30.531940 -87.242073                        Hair salon         4.7   \n",
-       "4  28.032902 -81.733152                        Laundromat         3.2   \n",
+       "   longitude                   category  avg_rating  num_of_reviews  \\\n",
+       "0 -85.752277  Family practice physician         4.2              18   \n",
+       "1 -85.752277  Family practice physician         4.2              18   \n",
+       "2 -85.752277  Family practice physician         4.2              18   \n",
+       "3 -85.752277  Family practice physician         4.2              18   \n",
+       "4 -85.752277  Family practice physician         4.2              18   \n",
        "\n",
-       "   num_of_reviews  \n",
-       "0               8  \n",
-       "1              65  \n",
-       "2              65  \n",
-       "3              65  \n",
-       "4              13  "
+       "        user_id  rating            timestamp  sentiment_analysis  \n",
+       "0  1.014719e+20       1  2021-03-08 15:07:30                   0  \n",
+       "1  1.154772e+20       5  2020-07-18 00:13:37                   0  \n",
+       "2  1.018050e+20       5  2018-05-04 10:30:53                   2  \n",
+       "3  1.063444e+20       1  2016-07-07 16:10:19                   0  \n",
+       "4  1.008751e+20       5  2016-02-12 12:56:55                   2  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,12 +721,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Exportamos el dataset\n",
-    "df_merged.to_csv('business.csv', index=False)"
+    "df_merged.to_csv('merged.csv', index=False)"
    ]
   }
  ],
