update ML models

--- a/Sprint 3 Machine Learning y Analitics/ML/modelo_user_item.ipynb
+++ b/Sprint 3 Machine Learning y Analitics/ML/modelo_user_item.ipynb
@@ -132,18 +132,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Vamos a exportar e importar el dataset\n",
-    "reviews.to_csv('data_user_item.csv', index=False)\n",
-    "\n",
-    "reviews = pd.read_csv('./data_user_item.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [
@@ -170,6 +158,18 @@
     "\n",
     "# Renombramos name como business_id\n",
     "reviews.rename(columns={'name': 'business_id'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vamos a exportar e importar el dataset\n",
+    "reviews.to_csv('data_user_item.csv', index=False)\n",
+    "\n",
+    "reviews = pd.read_csv('./data_user_item.csv')"
    ]
   },
   {
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        " 'Girl And A Grill']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,10 +453,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reviews.to_parquet('data_user_item.parquet', index=False)\n"
+   ]
   }
  ],
  "metadata": {
